    FIXED: [ 2265338 ] Copy from rar files broken
    FIXED: [ 2484665 ] Crash when deleting modified user action
    FIXED: MountMan: mount/umount/eject uses Solid if possible
    FIXED: [ 2381505 ] Ctrl+Shift+D in editor (KWrite) not work
    FIXED: Krusader fails to edit files containing international chars with Shift+F4

  CHANGED: Initial Konfigurator size is now 900x680
     
     I18N: Updated Catalan translation (thanks to Joaquim Perez)
     I18N: Updated Slovak translation (thanks to Zdenko Podobný and Ondrej Pačay "Yogi" )
     I18N: Updated Hungarian translation
     I18N: Updated Slovenian translation
     I18N: Updated Swedish translation (thanks Peter Landgren)


2.0.0-beta2 "Space Odyssey"
===========================

    ADDED: shortcuts: copy by queue (SHIFT+F5), move by queue (SHIFT+F6)
    ADDED: Krusader support for tar.lzma (KDE's tar protocol doesn't support it yet)
    ADDED: Possibility to choose one of five sorting methods (thanks to Jacek Jaworski)
    ADDED: compare by content for search / locate
    ADDED: New mouse selection mode
    ADDED: Evolution can be used as the default e-mail sender (thanks to Agustin Henze)
    ADDED: enqueue operation for copy / move
    ADDED: Konfigurator mouse selection mode: Possibility to select a predefined
           mode and change a detail. 
    ADDED: [ 1704953 ] highlight quick search match
    ADDED: Useractions: added checkbox "enabled"
           and run mode option "Run in embedded terminal emulator"
    ADDED: the description of a dir contains its size if it is known

     ARCH: MediaButton uses Solid for medium detection
     ARCH: QuickSearch is moved to KrView from Detailed/Brief views
     ARCH: Keyboard handling is moved to KrView from Detailed/Brief views

    FIXED: version number under Windows
    FIXED: the Win shortcuts doesn't work in the UserAction examples
    FIXED: [ 2091314 ] krviewer does not remember its window size
    FIXED: [ 2219012 ] user action icons are not saved