@@ -1,3 +1,4 @@
+    FIXED: [ 1965317 ] Return to panel when pressing Escape in kcmdline/panel path
     FIXED: [ 2265338 ] Copy from rar files broken
     FIXED: [ 2484665 ] Crash when deleting modified user action
     FIXED: MountMan: mount/umount/eject uses Solid if possible
